[package]
name = "picosakura"
version = "0.1.43" # picosakura
edition = "2021"
authors = ["kujirahand <web@kujirahand.com>"]
description = "Picosakura mml player"
license = "MIT"
repository = "https://github.com/kujirahand/picosakura-rust"
exclude = [
    "/picosakura-pack",
    "/samples/*.mid",
    "/*.sh", "/*.bat", "/*.mid", "/*.mml"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rustysynth = "1.3.1"
sakuramml = "0.1.43"
tinyaudio = "0.1.3"
wav_io = "0.1.14"
wasm-bindgen = "0.2"

